@@ -4,9 +4,9 @@ import com.google.code.kaptcha.impl.DefaultKaptcha;
 import com.mingdong.common.util.StringUtils;
 import com.mingdong.core.model.RestResp;
 import com.mingdong.csp.constant.Field;
+import org.apache.commons.codec.binary.Base64;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
-import sun.misc.BASE64Encoder;
 
 import javax.annotation.Resource;
 import javax.imageio.ImageIO;
@@ -35,8 +35,7 @@ public class CommonController
         BufferedImage image = kaptchaBuilder.createImage(txt);
         ByteArrayOutputStream outputStream = new ByteArrayOutputStream();
         ImageIO.write(image, "jpg", outputStream);
-        BASE64Encoder encoder = new BASE64Encoder();
-        String pic64 = encoder.encode(outputStream.toByteArray());
+        String pic64 = Base64.encodeBase64String(outputStream.toByteArray());
         resp.addData(Field.IMAGE_CAPTCHA, "data:image/png;base64," + pic64);
         return resp;
     }
